--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <div id="final-2" class="screen">
         <h1>Final Words</h1>
         <div class="poem-card">
-            <strong>Tried Writing in Gujrati (sry if it is wrong)</strong>
+            <strong>Just For U <3 </strong>
            When I think about us, I smile  Not just because of the big moments, but because of the small ones too. The random laughs The serious late-night talks The times you checked on me without me asking 🤍 Even the comfortable silence between us means something. You’ve been part of some of the most important chapters of my life  And no matter where life takes us, those memories will always stay close to my heart 💌 </div>
         <div class="poem-card">
             <strong>I HOPE U LIKED IT</strong>
@@ -306,4 +306,5 @@
         function closeDrawer() { document.getElementById('side-bar').classList.remove('open'); }
     </script>
 </body>
+
 </html>
